# open_spiel

./: .gitignore  NeilDockerfile  README.md  Setup.md  Setup.txt  cleanrl  jupyter_job.sh  notebooks  requirements.txt  sats  script.py
configs/: 3playershidden_v3_1.json  3playershidden_v3_2.json  april6_t1.json  big.json  big_example.json  big_game.json  big_game_2.json  big_game_2_handcrafted.json  big_game_3.json  bluff.json  bully1_2.json  config_length.json  confused_national.json  confused_national_sats.json  confused_national_trap.json  confused_national_with_signal.json  confused_national_with_undersell.json  dec15_2rvn_hide_demand.json  dec15_2rvn_signal.json  dec15_all_confused_signal.json  dec15_all_confused_with_local_base.json  dec15_confused_national_hide_demand.json  dec15_confused_national_signal.json  dec15_regional_vs_national_hide_demand.json  dec15_regional_vs_national_signal.json  greg_test.json  jan12_2rvn_base.json  jan12_2rvn_hide_demand.json  jan12_2rvn_reveal.json  jan12_2rvn_undersell.json  jan12_all_confused_base.json  jan12_all_confused_hide_demand.json  jan12_all_confused_reveal.json  jan12_all_confused_undersell.json  jan12_all_confused_with_local_base.json  jan12_all_confused_with_local_hide_demand.json  jan12_all_confused_with_local_reveal.json  jan12_all_confused_with_local_undersell.json  jan12_confused_national_base.json  jan12_confused_national_hide_demand.json  (+134 more)
configs/aug31/: aug31_0_base.json  aug31_0_grace_period.json  aug31_0_hide_demand.json  aug31_0_high_speed.json  aug31_0_medium_speed.json  aug31_0_no_activity.json  aug31_0_risk_averse.json  aug31_0_risk_averse_tie_break.json  aug31_0_spite.json  aug31_0_spite_grace.json  aug31_0_tie_break.json  aug31_0_undersell_allowed.json  aug31_1_base.json  aug31_1_grace_period.json  aug31_1_hide_demand.json  aug31_1_high_speed.json  aug31_1_medium_speed.json  aug31_1_no_activity.json  aug31_1_risk_averse.json  aug31_1_risk_averse_tie_break.json  aug31_1_spite.json  aug31_1_spite_grace.json  aug31_1_tie_break.json  aug31_1_undersell_allowed.json  aug31_2_base.json  aug31_2_grace_period.json  aug31_2_hide_demand.json  aug31_2_high_speed.json  aug31_2_medium_speed.json  aug31_2_no_activity.json  aug31_2_risk_averse.json  aug31_2_risk_averse_tie_break.json  aug31_2_spite.json  aug31_2_spite_grace.json  aug31_2_tie_break.json  aug31_2_undersell_allowed.json  aug31_3_base.json  aug31_3_grace_period.json  aug31_3_hide_demand.json  aug31_3_high_speed.json  (+20 more)
configs/dec11/: dec11_example.json
configs/dec11_bc/: dec11_bc_0_base.json  dec11_bc_0_base_tie_break.json  dec11_bc_0_risk_averse.json  dec11_bc_0_risk_averse_tie_break.json  dec11_bc_1_base.json  dec11_bc_1_base_tie_break.json  dec11_bc_1_risk_averse.json  dec11_bc_1_risk_averse_tie_break.json  dec11_bc_2_base.json  dec11_bc_2_base_tie_break.json  dec11_bc_2_risk_averse.json  dec11_bc_2_risk_averse_tie_break.json  dec11_bc_3_base.json  dec11_bc_3_base_tie_break.json  dec11_bc_3_risk_averse.json  dec11_bc_3_risk_averse_tie_break.json  dec11_bc_4_base.json  dec11_bc_4_base_tie_break.json  dec11_bc_4_risk_averse.json  dec11_bc_4_risk_averse_tie_break.json
configs/dec13_bc/: dec13_bc_0_base_tie_break.json  dec13_bc_0_risk_averse_tie_break.json  dec13_bc_1_risk_averse.json  dec13_bc_1_risk_averse_tie_break.json  dec13_bc_2_base.json  dec13_bc_2_base_tie_break.json  dec13_bc_3_base_tie_break.json  dec13_bc_3_risk_averse_tie_break.json  dec13_bc_4_base.json  dec13_bc_4_risk_averse.json  dec13_bc_4_risk_averse_tie_break.json
configs/dec13b_bc/: dec13b_bc_0_base.json  dec13b_bc_0_risk_averse.json  dec13b_bc_1_base.json  dec13b_bc_1_base_tie_break.json  dec13b_bc_2_risk_averse.json  dec13b_bc_2_risk_averse_tie_break.json  dec13b_bc_3_base.json  dec13b_bc_3_risk_averse.json  dec13b_bc_4_base_tie_break.json
configs/feb10_2p_1type/: feb10_2p_1type_0_base_dev1000_rho0_t1.json  feb10_2p_1type_0_base_dev1000_rho0_t1_tie_break.json  feb10_2p_1type_0_base_dev1000_rho1_t1.json  feb10_2p_1type_0_base_dev1000_rho1_t1_tie_break.json  feb10_2p_1type_1_base_dev1000_rho0_t1.json  feb10_2p_1type_1_base_dev1000_rho0_t1_tie_break.json  feb10_2p_1type_1_base_dev1000_rho1_t1.json  feb10_2p_1type_1_base_dev1000_rho1_t1_tie_break.json  feb10_2p_1type_2_base_dev1000_rho0_t1.json  feb10_2p_1type_2_base_dev1000_rho0_t1_tie_break.json  feb10_2p_1type_2_base_dev1000_rho1_t1.json  feb10_2p_1type_2_base_dev1000_rho1_t1_tie_break.json  feb10_2p_1type_3_base_dev1000_rho0_t1.json  feb10_2p_1type_3_base_dev1000_rho0_t1_tie_break.json  feb10_2p_1type_3_base_dev1000_rho1_t1.json  feb10_2p_1type_3_base_dev1000_rho1_t1_tie_break.json  feb10_2p_1type_4_base_dev1000_rho0_t1.json  feb10_2p_1type_4_base_dev1000_rho0_t1_tie_break.json  feb10_2p_1type_4_base_dev1000_rho1_t1.json  feb10_2p_1type_4_base_dev1000_rho1_t1_tie_break.json
configs/feb10_2p_2type/: feb10_2p_2type_0_base_dev1000_rho0_t2.json  feb10_2p_2type_0_base_dev1000_rho0_t2_tie_break.json  feb10_2p_2type_0_base_dev1000_rho1_t2.json  feb10_2p_2type_0_base_dev1000_rho1_t2_tie_break.json  feb10_2p_2type_1_base_dev1000_rho0_t2.json  feb10_2p_2type_1_base_dev1000_rho0_t2_tie_break.json  feb10_2p_2type_1_base_dev1000_rho1_t2.json  feb10_2p_2type_1_base_dev1000_rho1_t2_tie_break.json  feb10_2p_2type_2_base_dev1000_rho0_t2.json  feb10_2p_2type_2_base_dev1000_rho0_t2_tie_break.json  feb10_2p_2type_2_base_dev1000_rho1_t2.json  feb10_2p_2type_2_base_dev1000_rho1_t2_tie_break.json  feb10_2p_2type_3_base_dev1000_rho0_t2.json  feb10_2p_2type_3_base_dev1000_rho0_t2_tie_break.json  feb10_2p_2type_3_base_dev1000_rho1_t2.json  feb10_2p_2type_3_base_dev1000_rho1_t2_tie_break.json  (+4 more)
docs/: games.md
open_spiel/: policy.cc  simultaneous_move_game.h  spiel.cc  spiel.h  spiel_utils.cc  spiel_utils.h
open_spiel/games/: CMakeLists.txt  auction.cc  auction_test.cc  bidder.h  cartesian.h  clock_auction.cc  clock_auction.h  clock_auction_old_seq.cc  clock_auction_old_seq.h  clock_auction_test.cc  first_sealed_auction.h  hallway.cc  hallway.h  parameters.json
open_spiel/games/clock_auction/: parameters.json
ppo/: config.json
wandb/: settings
(+4837 files in other folders)
